--- a/src/masonry/dev.pug
+++ b/src/masonry/dev.pug
@@ -1,9 +1,8 @@
-- var sizes = ['sm', 'md', 'lg']
 .dw
   - var n = 0
   while n < 16
-    - var size = Math.floor(Math.random() * 3 + 1)
-    .dw-panel(class=`dw-panel--${sizes[size - 1]}`)
-      .dw-panel__content
+    - var size = Math.floor(Math.random() * 450 + 1)
+    .dw-panel
+      .dw-panel__content(style=`height: ${size}px`)
         h1= n
     - n++
