--- a/src/masonry/style.styl
+++ b/src/masonry/style.styl
@@ -19,21 +19,18 @@ $config = {
   }
 }
 
-.dw
+.masonry
   display   flex
   flex-flow column wrap
   max-width 100%
 
-.dw-panel
+.masonry-panel
   flex       1 0 auto
   order      1
   overflow   hidden
   padding    4px
   transition all .25s ease 0s
   width      100%
-
-  &[style] .dw-panel__content
-    height 100%
 
   for $breakpoint, $value in $config.responses.breakpoints
 
@@ -77,7 +74,7 @@ h1
   margin     0
   text-align center
 
-.dw-panel
+.masonry-panel
   &__content
     align-items     center
     border-radius   10px
@@ -93,7 +90,7 @@ h1
 
   for $panel in (1..$config.items)
     &:nth-child({$panel})
-      .dw-panel__content
+      .masonry-panel__content
         background $generateRandomColor()
       animation-delay ($panel * .15s)
 
