--- a/src/swap-loader/dev.pug
+++ b/src/swap-loader/dev.pug
@@ -1,6 +1,23 @@
-.loader
-  div
-  div
-  div
-  div
-  div
+.container
+  .loader.loader--in-and-out
+    div
+    div
+    div
+    div
+    div
+
+.container
+  .loader.loader--out-from-behind
+    div
+    div
+    div
+    div
+    div
+
+.container
+  .loader.loader--lines
+    div
+    div
+    div
+    div
+    div
