--- a/src/swap-loader/style.styl
+++ b/src/swap-loader/style.styl
@@ -1,45 +1,102 @@
+$colors = red orange yellow green white indigo violet
+$children = 5
+
+genInAndOut($num, $id)
+  @keyframes $id
+    0%, 10%, 90%, 100%
+      transform rotate((360 / $children * $num) * 1deg)
+    20%, 80%
+      transform rotate((360 / $children * $num) * 1deg) translateY(200%)
+
+  transform rotate((360 / $children * $num) * 1deg)
+  animation unquote($id) 4s ($num * .1s) infinite
+
+.loader
+
+  &--out-from-behind:after
+    content ''
+    height 40px
+    width 40px
+    background-color white
+    display block
+    border-radius 100%
+    position absolute
+    top 50%
+    left 50%
+    transform translate(-50%, -50%)
+    z-index $children
+
+    div
+      animation-duration 2s
+
+  &--in-and-out
+  &--out-from-behind
+    animation rotate 4s infinite linear
+
+    div
+      position absolute
+      top 0
+      left 0
+      width 100%
+      height 100%
+      border-radius 100%
+
+    for $child in (1..$children)
+      div:nth-of-type({$child})
+        background-color $colors[$child - 1]
+        z-index 5 - $child
+        genInAndOut($child, 'load--' + $child)
+
+  &--lines
+    animation rotate 4s infinite linear
+
+    div
+      border-radius 25%
+      position absolute
+      top 50%
+      left 50%
+      margin-left -25%
+      margin-top -75%
+      width 50%
+      height 150%
+
+      for $child in (1..$children)
+        &:nth-of-type({$child})
+          background-color $colors[$child - 1]
+          z-index 5 - $child
+          genInAndOut($child, 'load--' + $child)
+
+
+/**
+  * Theming
+*/
 *
   box-sizing border-box
 
 body
   background-color #111
+  display flex
+  flex-wrap wrap
+  align-items center
+  justify-content center
 
-genTransformAndAnimation($num, $id)
-  @keyframes $id
-    0%, 10%, 90%, 100%
-      transform rotate((360 / 5 * $num) * 1deg)
-    20%, 80%
-      transform rotate((360 / 5 * $num) * 1deg) translateY(200%)
-
-  transform rotate((360 / 5 * $num) * 1deg)
-  animation unquote($id) 4s ($num * .1s) infinite
+.container
+  border        4px solid silver
+  border-radius 6px
+  height        200px
+  margin        10px
+  position      relative
+  width         200px
 
 .loader
-  position absolute
-  top 50%
-  left 50%
-  background-color red
-  height 20px
-  width 20px
-  animation rotate 4s infinite linear
-
-  div
-    position absolute
-    top 0
-    left 0
-    width 100%
-    height 100%
-    background-color white
-    border-radius 100%
-
-  for $child in (1..5)
-    div:nth-of-type({$child})
-      genTransformAndAnimation($child, 'load--' + $child)
+  height      20px
+  left        50%
+  margin-left -10px
+  margin-top  -10px
+  position    absolute
+  top         50%
+  width       20px
 
 @keyframes rotate
   to
     transform rotate(360deg)
-
-@keyframes load
-  50%, 100%
-    transform translateY(200px)
