--- a/src/swap-loader/style.styl
+++ b/src/swap-loader/style.styl
@@ -19,28 +19,6 @@ dot()
     width            $dotSize
     {block}
 
-
-scaleOut($num, $id, $travel)
-  @keyframes $id
-    0%, 10%
-      transform scale(0) rotate((360 / $children * $num) * 1deg) translateY(0%)
-    20%, 80%
-      transform scale(1) rotate((360 / $children * $num) * 1deg) translateY($travel)
-    90%, 100%
-      transform scale(0) rotate((360 / $children * $num) * 1deg) translateY(0%)
-
-  animation unquote($id) 4s ($num * .2s) infinite
-
-fanOut($num, $id, $travel)
-  @keyframes $id
-    10%, 80%
-      transform rotate((360 / $children * $num) * 1deg) translateY($travel)
-    90%, 100%
-      transform rotate((360 / $children * $num) * 1deg) translateY(0)
-
-  animation unquote($id) 4s ($num * .1s) infinite
-
-
 @keyframes fadeInAndOut
   0%, 25%, 100%
     opacity 0
@@ -155,11 +133,11 @@ swap($num, $id)
 */
 dip($num, $id)
   @keyframes $id
-    15%, 85%
+    50%
       transform rotate((360 / $children * $num) * 1deg) scale(0.5)
-    0%, 25%, 75%, 100%
+    0%, 40%, 60%, 100%
       transform rotate((360 / $children * $num) * 1deg) translateY(150%)
-  animation unquote($id) 2s ($num * .2s) infinite
+  animation unquote($id) 3s ($num * .3s) infinite
 
 .loader
   &--dip
@@ -179,11 +157,22 @@ dip($num, $id)
 
 
 
+/**
+  * Scale in and out
+*/
+scaleOut($num, $id)
+  @keyframes $id
+    35%, 65%
+      transform scale(0) rotate((360 / $children * $num) * 1deg) translateY(0%)
+    0%, 25%, 75%, 100%
+      transform scale(1) rotate((360 / $children * $num) * 1deg) translateY(175%)
 
+  transform rotate((360 / $children * $num) * 1deg) translateY(175%)
+  animation unquote($id) 4s ($num * .2s) infinite
 
-
+.loader
   &--scale-out
-    animation rotate 6s infinite linear
+    animation rotate 8s infinite linear
 
     +dot()
       background-color white
@@ -191,7 +180,7 @@ dip($num, $id)
         &:nth-of-type({$x})
 
           z-index 5 - $x
-          scaleOut($x, 'through--' + $x, 150%)
+          scaleOut($x, 'scale-out--' + $x)
 
   &--lines-fade
     animation rotate 4s infinite linear
@@ -214,14 +203,28 @@ dip($num, $id)
           fadeInAndOut2($child, 'fade-in-and-out2--' + $child, 100%)
 
 
+
+/**
+  * Fanning out effect so dots fan out and then fan back in continuosly
+*/
+fanOut($num, $id, $travel)
+  @keyframes $id
+    0%, 10%
+      transform rotate(0deg) translateY(0)
+    20%, 70%
+      transform rotate((360 / $children * $num) * 1deg) translateY($travel)
+    90%, 100%
+      transform rotate(360deg) translateY(0)
+
+  animation unquote($id) 4s ($num * .1s) infinite
+
+.loader
   &--fan-out
     animation rotate 8s infinite linear
 
     +dot()
-      background-color white
       for $child in (1..$children)
         &:nth-of-type({$child})
-          z-index 5 - $child
           fanOut($child, 'fan--' + $child, 150%)
 
 /**
