--- a/src/swap-loader/style.styl
+++ b/src/swap-loader/style.styl
@@ -131,6 +131,7 @@ dip($num, $id)
       transform rotate((360 / $children * $num) * 1deg) scale(0.5)
     0%, 40%, 60%, 100%
       transform rotate((360 / $children * $num) * 1deg) translateY(150%)
+  transform rotate((360 / $children * $num) * 1deg) translateY(150%)
   animation unquote($id) 3s ($num * .3s) infinite
 
 .loader
