--- a/src/swap-loader/dev.pug
+++ b/src/swap-loader/dev.pug
@@ -1,4 +1,4 @@
-for style in ['in-and-out', 'out-from-behind', 'swap', 'dip', 'scale-out', 'fan-out', 'fade-in-and-out', 'fade-in-and-out-2', 'mexican-wave']
+for style in ['in-and-out', 'out-from-behind', 'swap', 'dip', 'scale-out', 'fan-out', 'fade-in-and-out', 'fade-in-and-out-2', 'mexican-wave', 'dive']
   .container
     .loader(class=`loader--${style}`)
       div
