--- a/src/static/style.styl
+++ b/src/static/style.styl
@@ -3,18 +3,21 @@
   animation  fadeIn .5s
 
 body
-  align-items      center
   background-color #111
-  display          flex
   color            #fafafa
-  justify-content  center
+  height           100vh
+  width            100vw
   margin           0
   padding          0
-  text-align       center
 
 canvas
-  height           250
-  width            250
+  height           250px
+  width            250px
+  position         absolute
+  top              50%
+  left             50%
+  margin-left      -125px
+  margin-top       -125px
   animation        pulse 30s infinite ease
 
 @keyframes pulse
@@ -28,3 +31,12 @@ canvas
     opacity 0
   to
     opacity 1
+
+.controls
+  label
+    display block
+    margin-bottom 5px
+  position absolute
+  padding 20px
+  bottom 10px
+  left 10px
