--- a/boilerplate/layout.boilerplate.pug
+++ b/boilerplate/layout.boilerplate.pug
@@ -4,6 +4,7 @@ html
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title Some cool pen
     meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1.0")
+    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")
     link(rel='stylesheet', href='style.css')
   body
     block content
