--- a/src/hypno/style.styl
+++ b/src/hypno/style.styl
@@ -3,9 +3,12 @@
   animation  fadeIn .5s
 
 body
-  background-color #e74c3c
+  background-color #111
   color            #fafafa
   text-align       center
+  display          flex
+  align-items      center
+  justify-content  center
 
 @keyframes fadeIn
   from
