Create hypno bear

--- a/src/hypno/style.styl
+++ b/src/hypno/style.styl
@@ -18,3 +18,23 @@ body
 
 canvas
   border-radius 100%
+  background-color #111
+  height 200px
+  width  200px
+
+button
+  background-color transparent
+  border-radius    100%
+  height           40px
+  width            40px
+  opacity          0.5
+  transition       opacity .25s ease 0s
+  position         absolute
+  bottom           20px
+
+  &:hover
+    opacity 1
+
+i
+  color #FFF
+  font-size 20px !important
