Update caret-position work

--- a/src/caret-position/dev.pug
+++ b/src/caret-position/dev.pug
@@ -1,7 +1,15 @@
 .input__wrapper.get-position-input
-  .input__marker
+  .input__marker This is the end of your selection.
   input.input
 
 .input__wrapper.get-position-textarea
-  .input__marker
+  .input__marker This is the end of your selection.
   textarea.input
+
+.input__wrapper.get-selection-textarea
+  .input__marker This is where you selected.
+  textarea.input
+
+.input__wrapper.get-selection-input
+  .input__marker This is where you selected.
+  input.input
