Refactor and comment caret-position

--- a/src/caret-position/dev.pug
+++ b/src/caret-position/dev.pug
@@ -1,15 +1,15 @@
 .input__wrapper.get-position-input
-  .input__marker This is the end of your selection.
+  .input__marker.input__marker--position Here's the caret!
   input.input
 
 .input__wrapper.get-position-textarea
-  .input__marker This is the end of your selection.
+  .input__marker.input__marker--position Here's the caret!
   textarea.input
 
 .input__wrapper.get-selection-textarea
-  .input__marker This is where you selected.
+  .input__marker.input__marker--selection Here's what you selected!
   textarea.input
 
 .input__wrapper.get-selection-input
-  .input__marker This is where you selected.
+  .input__marker.input__marker--selection Here's what you selected!
   input.input
