--- a/src/caret-position/style.styl
+++ b/src/caret-position/style.styl
@@ -1,11 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Lato')
 *
   box-sizing border-box
   animation  fadeIn .5s
 
 body
-  background-color #e74c3c
+  background-color #52b3d9
   color            #fafafa
   text-align       center
+  font-size        16px
+  font-family 'Lato', sans-serif
+
+p
+  max-width 300px
+  margin 0 auto 30px
+
+h1
+  font-size 2.5rem
 
 @keyframes fadeIn
   from
@@ -16,51 +26,77 @@ body
 textarea
   height 150px
 
+.demo-input
+  margin 10px auto
+
+.custom-suggestions
+  $active-color = #19b5fe
+  cursor pointer
+  list-style none
+  margin 0
+  padding 0
+  &--active
+    background-color $active-color
+  li
+    text-align left
+    &:hover
+      background-color $active-color
+
 .input
-  outline 0
+  $line-height = 16px
+  $font-size = 16px
+  $color = #111
   border 0
-  text-align left
   border-radius 4px
-  line-height 16px
-  font-size 16px
+  color $color
+  font-size $font-size
+  line-height $line-height
+  outline 0
   padding 10px 12px
-  width   150px
   position relative
+  text-align left
+  width   230px
+  &::placeholder
+    color lighten($color, 80%)
+    text-align center
   &__wrapper
     display inline-block
     position relative
   &__marker
-    $marker-color = black
-    font-size 10px
-    width  auto
+    $marker-color = #111
     background-color $marker-color
-    position absolute
     border-radius 4px
-    z-index 9999
-    white-space nowrap
-    padding 4px 6px
-    transform translate(5%, -70%)
-    display none
-    transition top .1s ease 0s, left .1s ease 0s
     box-shadow 0 2px 5px lighten($marker-color, 30%)
+    display none
+    font-size 12px
+    padding 4px 6px
+    position absolute
+    transform translate(5%, -70%)
+    transition top .1s ease 0s, left .1s ease 0s
+    white-space nowrap
+    width  auto
+    z-index 9999
     &:after
+      background-color $marker-color
       content ''
       height 10px
-      width  15px
       position absolute
-      background-color $marker-color
+      width  15px
       z-index -1
     &--position
       &:after
-        left 0
         bottom 0
+        left 0
         transform translate(-10%, 10%) rotate(-15deg) skewX(-40deg)
     &--selection
       transform translate(-50%, -100%)
       &:after
-        left 50%
         bottom 0
+        left 50%
         transform translate(-50%, 0) rotate(45deg)
-
+    &--custom
+      transform translate($font-size, $line-height)
+      &:after
+        display none
     &--visible
       display block
