--- a/src/display-contents/style.styl
+++ b/src/display-contents/style.styl
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lato')
 *
   box-sizing border-box
 
@@ -5,22 +6,33 @@ body
   background-color #2eec71
   color            #fafafa
   text-align       center
+  font-size        16px
+  font-family      'Lato', sans-serif
+  padding          2rem
 
+random(ceiling)
+  return floor(math(1, 'random')*ceiling)
+
+limit = 40
 @keyframes move
   0%, 100%
     transform translate(0, 0)
   25%
-    transform translate(35%, 65%)
+    transform translate((random(limit) - (limit / 2)) * 1%, (random(limit) - (limit / 2)) * 1%)
   50%
-    transform translate(55%, 25%)
+    transform translate((random(limit) - (limit / 2)) * 1%, (random(limit) - (limit / 2)) * 1%)
+  75%
+    transform translate((random(limit) - (limit / 2)) * 1%, (random(limit) - (limit / 2)) * 1%)
 
 @keyframes move-flipped
   0%, 100%
     transform rotateY(180deg) translate(0, 0)
   25%
-    transform rotateY(180deg) translate(35%, 65%)
+    transform rotateY(180deg) translate((random(limit) - (limit / 2)) * 1%, (random(limit) - (limit / 2)) * 1%)
   50%
-    transform rotateY(180deg) translate(55%, 25%)
+    transform rotateY(180deg) translate((random(limit) - (limit / 2)) * 1%, (random(limit) - (limit / 2)) * 1%)
+  75%
+    transform rotateY(180deg) translate((random(limit) - (limit / 2)) * 1%, (random(limit) - (limit / 2)) * 1%)
 
 @keyframes nod
   0, 100%
@@ -28,76 +40,154 @@ body
   50%
     transform translateY(25%)
 
+@keyframes get-excited
+  0, 100%
+    transform translateY(0)
+  50%
+    transform translateY(-15px)
+
 .container
-  display inline-flex
   align-items center
   flex-direction column
   position relative
-
-random(ceiling)
-  return floor(math(1, 'random')*ceiling)
+  text-align center
 
 label
-  font-size 2.5rem
+  font-size 2rem
+  text-decoration line-through
 
 .dogmoji
-  font-size 2.5rem
-  position absolute
-  right 15px
-  transform translateY(0)
+  font-size 2.5 rem
+  margin-bottom 10px
 
 .let-the-dogs-out
-  border-radius 50%
-  height 3rem
-  width  3rem
-  &:checked
-    & ~ .dogmoji
-      animation nod .15s infinite
-    & ~ .yard
-      .kennel
-        display contents
-        .door
-          display none
-        .dog
-          animation-iteration-count infinite
-          for dog in (1..20)
-            &:nth-child({dog})
-              if random(10) < 5
-                animation-name move
-              else
-                animation-name move-flipped
+  height 25px
+  width 25px
+  &:hover
+    & ~ .yard .dogs
+      animation get-excited .15s infinite
+
+  @supports (display: contents)
+    &:checked
+      & ~ .dogmoji
+        animation nod .15s infinite
+      & ~ .yard
+        .kennel
+          display contents
+          &__front
+            display none
+          .dog
+            animation-iteration-count infinite
+            for dog in (1..20)
+              &:nth-child({dog})
+                if random(10) < 5
+                  animation-name move
+                else
+                  animation-name move-flipped
 
 
 .yard
   border 4px solid silver
   border-radius 5px
   background-color grey
-  height 400px
-  width  400px
+  height 300px
+  width  300px
   display flex
   flex-direction row
   flex-wrap wrap
   justify-content center
   align-items center
+  margin 0 auto
 
-  .kennel
-    display block
-    flex-basis 100px
-    height 100px
-    overflow hidden
+.kennel
+  display block
+  height 150px
+  width 150px
+  overflow hidden
+  position relative
 
-    .door
-      height 100%
-      width  100%
-      background-color black
+  &__front
+    height 150px
+    width  150px
+    display flex
+    justify-content center
+    align-items center
+    animation rock 2s infinite alternate
 
-    .dog
-      display flex
-      height 2rem
-      margin 2rem
-      font-size 2rem
+  &__frame
+    wood-color = #f3a32c
+    slat-size = 20px
+    background repeating-linear-gradient(180deg, wood-color, wood-color slat-size, darken(wood-color, 30%) slat-size, darken(wood-color, 30%) slat-size + 2px)
+    clip-path polygon(0% 100%, 0 40%, 50% 0, 100% 40%, 100% 100%)
+    height 120px
+    position relative
+    width 100px
 
-      for dog in (1..17)
-        &:nth-child({dog})
-          animation-duration random(10) * .1s
-          animation-delay random(10) * .1s
+  &__roof
+    background-color #e74c3c
+    height 10px
+    left 50%
+    position absolute
+    top 10px
+    width 90px
+
+    &--left
+      transform-origin left
+      transform rotate(45deg) skewX(44deg)
+
+    &--right
+      transform-origin 0px
+      transform rotate(135deg) skewX(-45deg)
+
+  &__door
+    border-radius 25px 25px 0 0
+    height 70px
+    width 60px
+    background-color black
+    position absolute
+    bottom 0
+    left 50%
+    transform translateX(-50%)
+
+    .dogs
+      position absolute
+      bottom 0
+      left 50%
+      width 60px
+      margin-left -30px
+      .dog
+        position absolute
+        font-size 4rem
+        bottom 0
+        left 50%
+      .dog:nth-child(1)
+        font-size 2.5rem
+        transform translate(-50%, 0%)
+      .dog:nth-child(2)
+        font-size 1.5rem
+        transform translate(-180%, 0%)
+      .dog:nth-child(3)
+        font-size 1.25rem
+        transform translate(120%, 0%)
+
+.dog
+  display flex
+  font-size 1.5rem
+  width 20%
+  justify-content center
+
+  for dog in (1..16)
+    &:nth-child({dog})
+      animation-duration random(10) * .1s
+      animation-delay random(10) * .1s
+
+.no-firefox
+  display block
+  font-size 1.5rem
+
+@supports (display: contents)
+  .no-firefox
+    display none
+    text-decoration none
+  label
+    text-decoration none
