Updates to flick-timer

--- a/src/flick-timer/style.styl
+++ b/src/flick-timer/style.styl
@@ -51,7 +51,11 @@ button
   &:active
     background-color darken(#fff, 20%)
     color #fff
-
+.quote
+  font-size .85rem
+  max-width 80vw
+  margin-bottom 20px
+  text-align center
 
 @media(min-width 768px)
   html
