--- a/src/flick-timer/dev.pug
+++ b/src/flick-timer/dev.pug
@@ -1,4 +1,5 @@
 h1.title Flicks passed
 #app
   h1.flicks {{flickCount.toLocaleString()}}
+  .quote {{randomQuotes[quoteIndex]}}
   button(v-on:click='resetFlickCount') Reset
