--- a/src/oddly-cubes/dev.pug
+++ b/src/oddly-cubes/dev.pug
@@ -1,6 +1,7 @@
-- for (let l = 0; l < 3; l++)
-  .layer
-    - for(let c = 0; c < 3; c++)
-      .column
-        - for(let c = 0; c < 3; c++)
-          .cube
+.container
+  - for (let l = 0; l < 3; l++)
+    .layer
+      - for(let c = 0; c < 3; c++)
+        .column
+          - for(let c = 0; c < 3; c++)
+            .cube
